; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs.c_bfa_fcs_port_event_handler.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/bfa/extr_bfa_fcs.c_bfa_fcs_port_event_handler.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bfa_fcs_s = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32)* @bfa_fcs_port_event_handler to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bfa_fcs_port_event_handler(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.bfa_fcs_s*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.bfa_fcs_s*
  store %struct.bfa_fcs_s* %7, %struct.bfa_fcs_s** %5, align 8
  %8 = load %struct.bfa_fcs_s*, %struct.bfa_fcs_s** %5, align 8
  %9 = load i32, i32* %4, align 4
  %10 = call i32 @bfa_trc(%struct.bfa_fcs_s* %8, i32 %9)
  %11 = load i32, i32* %4, align 4
  switch i32 %11, label %20 [
    i32 128, label %12
    i32 129, label %16
  ]

12:                                               ; preds = %2
  %13 = load %struct.bfa_fcs_s*, %struct.bfa_fcs_s** %5, align 8
  %14 = getelementptr inbounds %struct.bfa_fcs_s, %struct.bfa_fcs_s* %13, i32 0, i32 0
  %15 = call i32 @bfa_fcs_fabric_link_up(i32* %14)
  br label %22

16:                                               ; preds = %2
  %17 = load %struct.bfa_fcs_s*, %struct.bfa_fcs_s** %5, align 8
  %18 = getelementptr inbounds %struct.bfa_fcs_s, %struct.bfa_fcs_s* %17, i32 0, i32 0
  %19 = call i32 @bfa_fcs_fabric_link_down(i32* %18)
  br label %22

20:                                               ; preds = %2
  %21 = call i32 @WARN_ON(i32 1)
  br label %22

22:                                               ; preds = %20, %16, %12
  ret void
}

declare dso_local i32 @bfa_trc(%struct.bfa_fcs_s*, i32) #1

declare dso_local i32 @bfa_fcs_fabric_link_up(i32*) #1

declare dso_local i32 @bfa_fcs_fabric_link_down(i32*) #1

declare dso_local i32 @WARN_ON(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
